# Dynamic_Static_Core

./: .gitignore  .gitmodules  CMakeLists-old.txt  CMakeLists.txt  Doxyfile  Dynamic_Static.Core.hpp  Dynamic_Static.Core.sln  Dynamic_Static.cmake  Dynamic_Static_Core.sln  ForceCMakeBuild.cpp  Generator.Main.cpp  HeaderGenerator.Main.cpp  README.md  dynamic_static.core.test.cmake
Dynamic_Static.Core/: CMakeLists.txt  Dynamic_Static.Core.vcxproj
Dynamic_Static.Core.Application/: CMakeLists.txt
Dynamic_Static.Core.Application/source/: Main.cpp
Dynamic_Static.Core/include/Dynamic_Static/Core/: Action.hpp  Algorithm.hpp  Callback.hpp  Collection.hpp  Defines.hpp  Dependency.hpp  FileSystem.hpp  IPrintable.hpp  MoveNotifier.hpp  MoveableHandle.hpp  NonMoveable.hpp  SharedObjectFactory.hpp  StringUtilities.hpp  Threads.hpp  TypeUtilities.hpp  Utilities.hpp  Validate.hpp  VectorUtilities.hpp  Version.hpp  Win32LeanAndMean.hpp
Dynamic_Static.Core/include/Dynamic_Static/Core/Events/: Event.hpp  Subscribable.hpp
Dynamic_Static.Core/include/Dynamic_Static/Math/: Defines.hpp  Math.hpp  Matrix4x4.hpp  Quaternion.hpp  Rectangle.hpp  Transform.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Dynamic_Static.Core/include/Dynamic_Static/System/: Defines.hpp  Directory.hpp  File.hpp  Input.hpp  Monitor.hpp  Path.hpp  Win32LeanAndMean.hpp  Window.hpp
Dynamic_Static.Core/source/Dynamic_Static/Core/: Object.cpp  StringUtilities.cpp  Version.cpp
Dynamic_Static.Core/src/Dynamic_Static/Core/: Algorithm.cpp  Object.cpp  SharedObjectFactory.cpp  StringUtilities.cpp  ToString.cpp  Version.cpp
Dynamic_Static.Core/src/Dynamic_Static/Math/: Vector3.cpp  Vector4.cpp
Dynamic_Static.Core/src/Dynamic_Static/System/: Directory.cpp  File.cpp  GLFWInclude.hpp  Monitor.cpp  Path.cpp  Resolution.cpp  Win32LeanAndMean.cpp  Window.cpp  WindowWin32.cpp
Dynamic_Static_Core/: CMakeLists.txt  Dynamic_Static_Core.licenseheader  Dynamic_Static_Core.vcxproj
Dynamic_Static_Core/include/Dynamic_Static/Core/: Algorithm.hpp  BinaryReader.hpp  ChildOf.hpp  Collection.hpp  Defines.hpp  DependsOn.hpp  Directory.hpp  Events.hpp  FileSystem.hpp  IPrintable.hpp  MoveNotifier.hpp  MoveableHandle.hpp  NonConstructable.hpp  NonCopyable.hpp  NonMoveable.hpp  NotImplementedError.hpp  Object.hpp  Random.hpp  StringUtilities.hpp  Threads.hpp  Time.hpp  ToString.hpp  Validate.hpp  VectorUtilities.hpp  Version.hpp
Dynamic_Static_Core/include/Dynamic_Static/Math/: AxisAlignedBoundingBox2D.hpp  AxisAlignedBoundingBox3D.hpp  Color.hpp  Defines.hpp  Math.hpp  Matrix3x3.hpp  Matrix4x4.hpp  OrientedBoundingBox2D.hpp  OrientedBoundingBox3D.hpp  Quaternion.hpp  Rectangle.hpp  Transform.hpp  Utilities.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Dynamic_Static_Core/include/Dynamic_Static/System/: Defines.hpp  Directory.hpp  Input.Manager.hpp  Input.hpp  Keyboard.hpp  Monitor.hpp  Mouse.hpp  Path.hpp  Point.hpp  Resolution.hpp  Window.hpp
Dynamic_Static_Core/src/Dynamic_Static/Core/: Algorithm.cpp  BinaryReader.cpp  Defines.cpp  Directory.cpp  IPrintable.cpp  NotImplementedError.cpp  Object.cpp  StringUtilities.cpp  Threads.cpp  ToString.cpp  Version.cpp
Dynamic_Static_Core/src/Dynamic_Static/Math/: Color.cpp  Matrix3x3.cpp  Matrix4x4.cpp  Quaternion.cpp  Transform.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
Dynamic_Static_Core/src/Dynamic_Static/System/: Directory.cpp  File.cpp  GLFWInclude.hpp  Input.Manager.cpp  Input.cpp  Keyboard.State.cpp  Keyboard.cpp  Monitor.Mode.cpp  Monitor.cpp  Mouse.State.cpp  Mouse.cpp  Point.cpp  Resolution.cpp  Win32LeanAndMean.cpp  Window.cpp  WindowGLFW.cpp  WindowWin32.cpp
PlatformBuildScripts/: build.sh
Sandbox/: CMakeLists.txt  Main.cpp  Sandbox.vcxproj
Tests/: CMakeLists.txt  Main.cpp  Tests.licenseheader  Tests.vcxproj
Tests/include/: catch.hpp
Tests/src/: BinaryReader.Tests.cpp  Collection.Tests.cpp  Event.Tests.inl  MoveNotifier.Tests.cpp  MoveableHandle.Tests.cpp  StringUtilities.Tests.cpp  Threads.Tests.cpp  VectorUtilities.Tests.cpp
Tests/src/Core/: BinaryReader.Tests.cpp  Event.Tests.cpp  Event.Tests.inl  Events.Tests.cpp  Events.Tests.inl  MoveNotifier.Tests.cpp  MoveableHandle.Tests.cpp  Random.Tests.cpp  StringUtilities.Tests.cpp  Threads.Tests.cpp  TypeUtilities.Tests.cpp  VectorUtilities.Tests.cpp
Tests/src/Math/: Matrix3x3.Tests.cpp  Matrix4x4.Tests.cpp  Quaternion.Tests.cpp  Vector.Tests.inl  Vector2.Tests.cpp  Vector3.Tests.cpp  Vector4.Tests.cpp
cmake/: glm.cmake
sandbox/: CMakeLists.txt
sandbox/source/: Main.cpp
source/: CMakeLists.txt
source/Dynamic_Static/Core/: BinaryReader.cpp  Colors.cpp  Memory.cpp  NotImplementedError.cpp  Object.cpp  String.cpp  StringUtilities.cpp  Version.cpp  Win32LeanAndMean.cpp
source/Dynamic_Static/Core.Ex/: BinaryReader.cpp  BinaryWriter.cpp
source/Dynamic_Static/Core/FileSystem/: Directory.cpp  File.cpp  Path.cpp
source/Dynamic_Static/Core/Input/: Input.Manager.cpp  Input.cpp  Keyboard.cpp  Mouse.cpp
source/Dynamic_Static/Core/Math/: Color.cpp  Matrix4x4.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
source/Dynamic_Static/Core/Threads/: Semaphore.cpp  ThreadPool.cpp  Worker.cpp
tests/: Algorithm.Tests.cpp  BinaryReader.Tests.cpp  CMakeLists.txt  LoremIpsum.txt  Pool.Tests.cpp  Random.Tests.cpp  StringUtilities.Tests.cpp  StringView.Tests.cpp  enum.tests.cpp  string.tests.cpp  subscribable.tests.cpp  vector.tests.cpp
tests/Events/: Delegate.Tests.cpp  Event.Tests.cpp  Events.Tests.cpp  Subscribable.Tests.cpp
tests/FileSystem/: File.Tests.cpp
tests/Threads/: Semaphore.Tests.cpp  ThreadPool.Tests.cpp  Worker.Tests.cpp
tests/source/: BinaryReader.Tests.cpp  Callback.Tests.cpp  LoremIpsum.hpp
tests/source/Dynamic_Static/Core/: Algorithm.Tests.cpp  Events.Tests.cpp  Random.Tests.cpp  StringUtilities.Tests.cpp  ToString.Tests.cpp  VectorUtilities.Tests.cpp
tests/source/Events/: Events.Tests.inl
tests/source/FileSystem/: File.Tests.cpp
tests/source/Math/: Vector.Tests.inl  Vector2.Tests.cpp  Vector3.Tests.cpp  Vector4.Tests.cpp
tests/source/Threads/: Semaphore.Tests.cpp  ThreadPool.Tests.cpp
(+236 files in other folders)
